FIx return type of function getRelatedTracks
