# apiServer/openAPI.yaml
@@ -202,6 +202,15 @@ components:
             type: string
           thumbnail:
             type: string
+          artists :
+            type : array
+            items:  
+              type: object
+              properties:
+                id:
+                  type: integer
+                artistKeyword:  
+                  type: string
     ArtistDetail:
       type: object
       nullable: true
